[tool.poetry]
name = "quickstart-developer"
version = "0.1.0"
description = ""
authors = ["Craig Davis <kg5ohk@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.11"
pre-commit = "^2.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
